devel
-----

* Fix defaults for inverted indexes and views. Consolidations 5 times
  less frequently, with minimum of 50(1 before) segments and 24M bytes
  (2M before), maximum 200 (10 before) segments and 8G bytes (800M
  before).

* Fix BTS-2231: Fix a divide-by-zero crash in case a smart edge collection is used in a
  collect query with a custom index.

* Add API for deployment ID: /_admin/deployment/id .

* Rename the `--experimental-vector-index` startup option to `--vector-index`
  and remove the experimental flag. The old name can still be used to enable the
  vector index feature.

* Add vertex collections for graph queries using edge collection syntax
  from named graphs. This means that if a query uses edge collection syntax
  and a named graph defines the from and to vertex collections for that edge
  collection, the WITH statement is no longer required.

* Add filtering support for vector index queries. Filter conditions can now be
  pushed down into vector similarity searches, enabling filtering with vector index by
  evaluating filters during the index scan rather than as a post-processing step.

* Upgraded OpenSSL to 3.5.4.

* Fix BTS-2203: Fix part of it by introducing memory supervision to COLLECT 

* Fix BTS-2203: Fix part of it by introducing memory supervision to MERGE
  instructions in query runtime.

* Fix BTS-2130: Fix the endless wait in Coordinators during
  CreateDatabase and CreateCollection.

* Fix ES-2678: In the upgrade scenario, we disable the ClusterFeature.
  We should therefore check before accessing clusterInfo() whether we're
  in an upgrade scenario. Added those checks in iresearch.

* Reverted RocksDB defaults for maximum wal size, number of sub
  compactions and compaction read ahead to stay close to established
  behaviour.

* Fix BTS-2214: In a rare hash collision situation it can happen that a
  valid edge in an enterprise graph fails to validate and is rejected.
